--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         <div class="main-header">
             <div class="main-header-container">
-                <a href="#">Electrum <i class="fas fa-bolt"></i></a>
+                <a href="#" id="brand">Electrum <i class="fas fa-bolt"></i></a>
                 <form action="" id="search-form">
                     <input type="text" id="search" placeholder="Busque aqui"></input>
-                    <input type="submit" value="Pesquisar" class="bt btn-half">
+                    <input type="submit" value="Pesquisar" class="btn btn-half">
                 </form>
                 <div class="header-actions-menu">
                     <div class="wishlist-container">
@@ -103,7 +103,7 @@
     <!-- Products -->
     <div class="products-grid">
         <h2>Produtos Novos</h2>
-        <div class="products-gri-container">
+        <div class="products-grid-container">
             <div class="products-grid-card">
                 <span class="label new">New</span>
                 <img src="img/prod-1.jpg" alt="Produto 1">
@@ -195,7 +195,7 @@
     <!-- Mais Vendidos -->
     <div class="products-grid">
         <h2>Mais vendidos</h2>
-        <div class="products-gri-container">
+        <div class="products-grid-container">
             <div class="products-grid-card">
                 <span class="label hot">Hot</span>
                 <img src="img/prod-5.jpg" alt="Produto 5">
